--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 PORT=5000
-MONGO_URI=mongodb+srv://naniumesh2004_db_user:2004@tester.mcr69m6.mongodb.net/?retryWrites=true&w=majority&appName=TESTER
+MONGO_URI=mongodb+srv://nani:2004@attendance.8rbz7nc.mongodb.net/?retryWrites=true&w=majority&appName=ATTENDANCE
 LOGIN_URI=mongodb+srv://password:200421@login.oq2luim.mongodb.net/?retryWrites=true&w=majority&appName=LOGIN
 PIN_URI=mongodb+srv://nani:2004@attendance.8rbz7nc.mongodb.net/test?retryWrites=true&w=majority&appName=ATTENDANCE
